--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div id="modal"></div>
   <div id="root"></div>
 </body>
 <script type="module" src="/src/main.jsx"></script>
