Elaborate README draft and set my signature in index.html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,32 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
   <title>Frontend Mentor | E-commerce product page</title>
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
 
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
   <div id="modal"></div>
   <div id="root"></div>
 </body>
+
 <script type="module" src="/src/main.jsx"></script>
-<!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+  <span style="color: black;">Coded by</span> <a href="#">Jose Ávila</a>.
+</div>
 
 </html>
